CHANGES IN FLTK 1.1.6

	- Watcom fixes (STR #584, STR #594, STR #595)
	- Fixed library include order when building DSOs on
	  MacOS X (STR #596)
	- fl_xid() could cause a WIN32 application to crash (STR
	  #560, STR #576, STR #618)
	- Fl_Browser::remove_() removed the item from the list
	  before computing the item height, which caused
	  problems with some programs (STR #613)


CHANGES IN FLTK 1.1.5

	- Documentation updates (STR #568, STR #570)
	- Shortcuts were incorrectly underlined in multi-line
	  labels (STR #566)
	- More CMake updates (STR #499)
	- The Watcom C++ compiler needed a small change (STR
	  #567)
	- Added DESTDIR support and now remove all man pages for
	  the "uninstall" target (STR #545)
	- Fix PNG drawing on buggy WIN32 graphics cards (STR
	  #548)
	- The configure script didn't propagate the CPPFLAGS
	  environment variable (STR #549)
	- The numpad keys didn't work properly on WIN32 (STR
	  #502)
	- fl_input() and friends now set the input focus to the
	  text field when the dialog is shown (STR #553)
	- Fixed background color mixup when drawing Fl_Choice
	  menus (STR #544)
	- Fixed MingW makefiles (STR #550)
	- More VC++ project file tweaking (STR #559)
	- Fl_PNG_Image didn't use the png_set_trns_to_alpha
	  function when available (STR #547)
	- The FL_UNFOCUS event wasn't always sent when switching
	  tabs (STR #558)


CHANGES IN FLTK 1.1.5rc3

	- Documentation updates (STR #505, STR #513)
	- Updated PNG library source to 1.2.7.
	- Updated ZLIB library source to 1.2.1.
	- Fixed VC++ project file problems (STR #476, STR #478,
	  STR #520, STR #527, STR #537)
	- Now look for 8 bits of alpha when the developer has
	  requested FL_RGB8 (STR #541)
	- The last line in an Fl_Help_View widget was not
	  aligned properly (STR #536)
	- The "search" symbol looked like a Q (STR #536)
	- Changed Fl_Help_View::get_color() to use a lookup
	  table to avoid serious Borland C++ 5.5 compiler bugs
	  (STR #533)